--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="favicon.icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <body>
