--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
-
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.icon" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+<meta charset="UTF-8"/>
+<link rel="icon" type="image/svg+xml" href="favicon.icon"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
 <body>
 <div id="app"></div>
 <script type="module" src="./src/index.js"></script>
